# caffe

./: .gitignore  1  CMakeLists.txt  Makefile.lcm  auto_run.sh  create_auto_run.py  create_auto_run.py.save  environment.sh  foo.npy  log.txt  log_-1.txt  log_0.txt  log_1.txt  log_2.txt  log_3.txt  log_4.txt  outcome.txt  predict.py  tran.py  vgg_test.ipynb
examples/: 00-classification.ipynb  accuracy.py  net_surgery.ipynb  predict.ipynb  vgg.py  vgg_dictnet-classification.ipynb  vgg_dictnet-surgery.ipynb  vgg_predict.ipynb  vgg_test.ipynb  vgg_test1.ipynb
examples/images/2016-06-28/: all_predict.txt  output_filename_refine_list.txt  output_files_poses_labels_list.txt  predict.txt
examples/images/lab_dataset/: all_list.txt  predict.txt
examples/jr-station/: 10000_list.txt  5000_list.txt  Bigram_Net_VGG.prototxt  CaseIn_Net_VGG_solver.prototxt  Dict.prototxt  count.py  create_lmdb.sh  create_min_dataset.py  dictnet_vgg_deploy.prototxt  lex-to-label-file.py  out.txt  part_Dict.prototxt  part_Dict.prototxt.save  part_lmdb.sh  part_test.txt  part_train.txt  raw_part_test.txt  read_line.py  select_cluster_file.py  solver.prototxt  solver.prototxt.save  test.txt  test_Dict.prototxt  train.txt  train_val.prototxt  vgg_test.txt
examples/jr-station/lex-to-lab-transform/: lex-to-label-file.py  lex-to-label.py  lex-to-labels.txt
examples/jr-station/prototxt/: Dict.prototxt  Dictnet_Net_VGG.prototxt
examples/lab/: train_val.prototxt.save
examples/lab_vgg/: create_file.sh  solver.prototxt  train_val.prototxt
lcm/: CMakeLists.txt
lcm/cpp_classification/: lcm_classification.cpp  lcm_classification_batch.cpp  lcm_classification_batch_image.cpp  lcm_classification_batch_image_gulidedog.cpp  lcm_classification_crop.cpp
models/bvlc_reference_caffenet/: deploy.prototxt
python/: classify.py
python/caffe/: io.py
src/caffe/: blob.cpp  solver.cpp
